=== 1.3

* Minor enhancements
  * rdoc-tags now supports outputting emacs-style tags.  <tt>rdoc -f tags
    --tag-style=emacs .</tt> will write an emacs-style tags file.

=== 1.2 / 2011-01-06

* Minor enhancements
  * rdoc-tags can now merge with Exuberant Ctags for projects with extensions
    or other languages.  Use <tt>--ctags-merge</tt> to enable merging.
    rdoc-tags will discover Exuberant Ctags in your PATH by checking the
    output of <tt>ctags --version</tt>.
* Bug Fixes
  * Fixed Hoe plugin to match RDoc::TagsTask arguments.
  * Require rdoc/generator/tags first for RDoc::TagsTask.
  * The tags generator no longer creates a create.rid file.

=== 1.1 / 2010-12-29

* Minor enhancements
  * Added RDoc::TagsTask which generates a TAGS file
  * Added +:rdoc_tags+ plugin for Hoe
* Bug fix
  * Multiple tags are now generated for definitions across more than one file.
    Bug #1 by postmodern.

=== 1.0 / 2010-12-23

* 1 major enhancement
  * Birthday!
