@@ -3,15 +3,15 @@ require 'rdoc/tags_task'
 ##
 # The RDoc tags plugin for Hoe uses the standard names +tags+, +retag+ and
 # +clobber_tags+ from RDoc::TagsTask.  The plugin also integrates with the
-# +clean+, +clobber+ and +newb+ tasks Hoe provides to add automatic cleanup.
+# +clobber+ and +newb+ tasks Hoe provides to add automatic cleanup.
 #
 # The +tags+ task automatically builds tags using all files in your
 # specification's require paths (defaults to the lib directory).
 #
 # When the +newb+ task is run the plugin will automatically build a TAGS file.
 #
-# When the +clean+ or +clobber+ task is run the plugin will automatically
-# remove the TAGS file.
+# When the +clobber+ task is run the plugin will automatically remove the TAGS
+# file.
 #
 # The plugin defaults to generating vim-style tags.  You can override this by
 # setting a value for <tt>'tags_style'</tt> in ~/.hoerc.  Be sure to check
@@ -43,7 +43,6 @@ module Hoe::RDoc_tags
       rd.ctags_path  = ctags_path
     end
 
-    task :clean   => :clobber_tags
     task :clobber => :clobber_tags
     task :newb    => :tags
   end
